--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,8 @@
 PORT=3000
 #https://dashboard.stripe.com/test/apikeys
 STRIPE_SECRET_KEY=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
+STRIPE_ENDPOINTSECRET=
+
+NATS_SERVERS="nats://localhost:4222"
