--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "watchOptions": {
-      "watchFile": "fixedPollingInterval"
-    }
+    "noFallthroughCasesInSwitch": false
   }
 }
