--- a/.env.template
+++ b/.env.template
@@ -5,4 +5,4 @@ STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
 STRIPE_ENDPOINTSECRET=
 
-NATS_SERVERS="nats://localhost:4222"
+NATS_SERVERS="nats://navs:4222"
